# ir-marker-tracker

./: .gitmodules  CMakeLists.txt  README.md
src/: CameraThread.cpp  CameraThread.h  main.cpp
